/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package userinterface;

import java.awt.Color;
import java.util.ArrayList;
import java.util.concurrent.ExecutorService;
import java.util.concurrent.Future;
import static linkintegrity.ValidationMethods.validateURL;

/**
 *
 */
public class FrontPage extends javax.swing.JFrame {

    public static long startTime;
    public static ExecutorService pool;
    public static Future future;
    public static ArrayList<Long> timeCompare = new ArrayList<>();
    public static ArrayList<String> linkList = new ArrayList<>();

    public static long min;
    // public static boolean error;
    /**
     * Creates new form Statistics
     */
    public static long timeElapsed;

    public FrontPage() {
        initComponents();
        errorDepthLabel.setVisible(false);
        errorInvalidURLLabel.setVisible(false);
        errorThreadsLabel.setVisible(false);
        threadNoSpin.setValue(1);
    }

    /**
     * This method is called from within the constructor to initialize the form.
     * WARNING: Do NOT modify this code. The content of this method is always
     * regenerated by the Form Editor.
     */
    @SuppressWarnings("unchecked")
    // <editor-fold defaultstate="collapsed" desc="Generated Code">//GEN-BEGIN:initComponents
    private void initComponents() {

        startButton = new javax.swing.JToggleButton();
        linkField = new javax.swing.JTextField();
        jLabel1 = new javax.swing.JLabel();
        jLabel2 = new javax.swing.JLabel();
        totalDepthSpin = new javax.swing.JSpinner();
        jLabel3 = new javax.swing.JLabel();
        errorDepthLabel = new javax.swing.JLabel();
        jSpinner1 = new javax.swing.JSpinner();
        jLabel5 = new javax.swing.JLabel();
        threadNoSpin = new javax.swing.JSpinner();
        errorThreadsLabel = new javax.swing.JLabel();
        errorInvalidURLLabel = new javax.swing.JLabel();
        jCheckBox1 = new javax.swing.JCheckBox();

        setDefaultCloseOperation(javax.swing.WindowConstants.EXIT_ON_CLOSE);
        setTitle("Link Integrity Check");
        setIconImage(new javax.swing.ImageIcon(getClass().getResource("/userinterface/icon.png")).getImage());

        startButton.setText("Start");
        startButton.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                startButtonActionPerformed(evt);
            }
        });

        linkField.setText("https://www.google.com/");

        jLabel1.setText("URL");

        jLabel2.setText("Depth");

        jLabel3.setFont(new java.awt.Font("Tahoma", 0, 18)); // NOI18N
        jLabel3.setText("Link Integrity Check");

        errorDepthLabel.setForeground(new java.awt.Color(255, 0, 0));
        errorDepthLabel.setText("*Depth can't be less than 0");

        jLabel5.setText("Threads");

        errorThreadsLabel.setForeground(new java.awt.Color(255, 0, 0));
        errorThreadsLabel.setText("*Threads can't be less than 1");

        errorInvalidURLLabel.setForeground(new java.awt.Color(255, 0, 0));
        errorInvalidURLLabel.setText("*Invalid URL");

        jCheckBox1.setText("Auto Threads");
        jCheckBox1.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                jCheckBox1ActionPerformed(evt);
            }
        });

        javax.swing.GroupLayout layout = new javax.swing.GroupLayout(getContentPane());
        getContentPane().setLayout(layout);
        layout.setHorizontalGroup(
            layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGroup(layout.createSequentialGroup()
                .addGap(20, 20, 20)
                .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                    .addComponent(jLabel2)
                    .addComponent(jLabel1)
                    .addComponent(jLabel5))
                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.UNRELATED)
                .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                    .addGroup(layout.createSequentialGroup()
                        .addComponent(linkField, javax.swing.GroupLayout.PREFERRED_SIZE, 238, javax.swing.GroupLayout.PREFERRED_SIZE)
                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                        .addComponent(errorInvalidURLLabel)
                        .addGap(0, 21, Short.MAX_VALUE))
                    .addGroup(layout.createSequentialGroup()
                        .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                            .addGroup(layout.createSequentialGroup()
                                .addComponent(threadNoSpin, javax.swing.GroupLayout.PREFERRED_SIZE, 61, javax.swing.GroupLayout.PREFERRED_SIZE)
                                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                                .addComponent(errorThreadsLabel))
                            .addGroup(layout.createSequentialGroup()
                                .addComponent(totalDepthSpin, javax.swing.GroupLayout.PREFERRED_SIZE, 58, javax.swing.GroupLayout.PREFERRED_SIZE)
                                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                                .addComponent(errorDepthLabel)))
                        .addContainerGap(javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))))
            .addGroup(layout.createSequentialGroup()
                .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                    .addGroup(layout.createSequentialGroup()
                        .addGap(116, 116, 116)
                        .addComponent(jLabel3, javax.swing.GroupLayout.PREFERRED_SIZE, 189, javax.swing.GroupLayout.PREFERRED_SIZE))
                    .addGroup(layout.createSequentialGroup()
                        .addGap(20, 20, 20)
                        .addComponent(jCheckBox1))
                    .addGroup(layout.createSequentialGroup()
                        .addGap(161, 161, 161)
                        .addComponent(startButton))
                    .addGroup(layout.createSequentialGroup()
                        .addGap(69, 69, 69)
                        .addComponent(jSpinner1, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)))
                .addContainerGap(javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
        );

        layout.linkSize(javax.swing.SwingConstants.HORIZONTAL, new java.awt.Component[] {threadNoSpin, totalDepthSpin});

        layout.setVerticalGroup(
            layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, layout.createSequentialGroup()
                .addGap(24, 24, 24)
                .addComponent(jLabel3)
                .addGap(45, 45, 45)
                .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
                    .addComponent(jLabel1)
                    .addComponent(linkField, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
                    .addComponent(errorInvalidURLLabel))
                .addGap(13, 13, 13)
                .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                    .addComponent(jSpinner1, javax.swing.GroupLayout.Alignment.TRAILING, javax.swing.GroupLayout.PREFERRED_SIZE, 0, javax.swing.GroupLayout.PREFERRED_SIZE)
                    .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
                        .addComponent(jLabel2)
                        .addComponent(totalDepthSpin, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
                        .addComponent(errorDepthLabel)))
                .addGap(13, 13, 13)
                .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                    .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
                        .addComponent(threadNoSpin, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
                        .addComponent(errorThreadsLabel))
                    .addComponent(jLabel5))
                .addGap(10, 10, 10)
                .addComponent(jCheckBox1)
                .addGap(13, 13, 13)
                .addComponent(startButton)
                .addContainerGap(50, Short.MAX_VALUE))
        );

        layout.linkSize(javax.swing.SwingConstants.VERTICAL, new java.awt.Component[] {threadNoSpin, totalDepthSpin});

        pack();
        setLocationRelativeTo(null);
    }// </editor-fold>//GEN-END:initComponents
    private void startupGUI() {
        errorDepthLabel.setVisible(false);
        errorInvalidURLLabel.setVisible(false);
        errorThreadsLabel.setVisible(false);
        while (timeCompare.size() != 0) {
            timeCompare.remove(0);
        }
        while (linkList.size() != 0) {
            linkList.remove(0);
        }
    }

    private boolean validateUserInput(String link, int depth, int threadNumber) {
        boolean error = false;
        if (!validateURL(link)) {
            errorInvalidURLLabel.setText("*Invalid URL");
            errorInvalidURLLabel.setForeground(Color.RED);
            errorInvalidURLLabel.setVisible(true);
            error = true;
        } else if (depth == 0) {
            errorInvalidURLLabel.setText("✓ Valid URL");
            errorInvalidURLLabel.setForeground(Color.GREEN);
            errorInvalidURLLabel.setVisible(true);
            error = true;
        }
        if (depth < 0) {
            errorDepthLabel.setVisible(true);
            error = true;
        }
        if (threadNumber < 1) {
            errorThreadsLabel.setVisible(true);
            error = true;
        }
        return error;
    }
    private void startButtonActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_startButtonActionPerformed
        errorDepthLabel.setVisible(false);
        errorInvalidURLLabel.setVisible(false);
        errorThreadsLabel.setVisible(false);
        boolean error;
        String l = linkField.getText();
        int depth = (Integer) totalDepthSpin.getValue();
        int threadNumber = (Integer) threadNoSpin.getValue();
        startupGUI();
        error = validateUserInput(l, depth, threadNumber);
        linkList.remove(0);
        if (!error) {
            if (jCheckBox1.isSelected()) {
                threadNumber = -1;
            }
            Statistics x = new Statistics(l, depth, threadNumber);
            x.setVisible(true);
            this.setVisible(false);
        }
    }//GEN-LAST:event_startButtonActionPerformed

    private void jCheckBox1ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jCheckBox1ActionPerformed
        // TODO add your handling code here:

        threadNoSpin.setEnabled(!jCheckBox1.isSelected());
        if (jCheckBox1.isSelected()) {
            threadNoSpin.setValue(1);
        }
    }//GEN-LAST:event_jCheckBox1ActionPerformed

    public static void main(String args[]) {

        /* Set the Nimbus look and feel */
        //<editor-fold defaultstate="collapsed" desc=" Look and feel setting code (optional) ">
        /* If Nimbus (introduced in Java SE 6) is not available, stay with the default look and feel.
         * For details see http://download.oracle.com/javase/tutorial/uiswing/lookandfeel/plaf.html 
         */
        try {
            for (javax.swing.UIManager.LookAndFeelInfo info : javax.swing.UIManager.getInstalledLookAndFeels()) {
                if ("Nimbus".equals(info.getName())) {
                    javax.swing.UIManager.setLookAndFeel(info.getClassName());
                    break;
                }
            }
        } catch (ClassNotFoundException ex) {
            java.util.logging.Logger.getLogger(FrontPage.class.getName()).log(java.util.logging.Level.SEVERE, null, ex);
        } catch (InstantiationException ex) {
            java.util.logging.Logger.getLogger(FrontPage.class.getName()).log(java.util.logging.Level.SEVERE, null, ex);
        } catch (IllegalAccessException ex) {
            java.util.logging.Logger.getLogger(FrontPage.class.getName()).log(java.util.logging.Level.SEVERE, null, ex);
        } catch (javax.swing.UnsupportedLookAndFeelException ex) {
            java.util.logging.Logger.getLogger(FrontPage.class.getName()).log(java.util.logging.Level.SEVERE, null, ex);
        }
        //</editor-fold>
        //</editor-fold>

        /* Create and display the form */
        java.awt.EventQueue.invokeLater(new Runnable() {
            public void run() {
                new FrontPage().setVisible(true);

            }
        });
    }

    // Variables declaration - do not modify//GEN-BEGIN:variables
    private javax.swing.JLabel errorDepthLabel;
    private javax.swing.JLabel errorInvalidURLLabel;
    private javax.swing.JLabel errorThreadsLabel;
    private javax.swing.JCheckBox jCheckBox1;
    private javax.swing.JLabel jLabel1;
    private javax.swing.JLabel jLabel2;
    private javax.swing.JLabel jLabel3;
    private javax.swing.JLabel jLabel5;
    private javax.swing.JSpinner jSpinner1;
    private javax.swing.JTextField linkField;
    private javax.swing.JToggleButton startButton;
    private javax.swing.JSpinner threadNoSpin;
    private javax.swing.JSpinner totalDepthSpin;
    // End of variables declaration//GEN-END:variables
}
