@startuml

title __USERINTERFACE's Class Diagram__\n

  namespace userinterface {
    class userinterface.FrontPage {
        {static} + future : Future
        {static} + min : long
        {static} + pool : ExecutorService
        {static} + startTime : long
        {static} + timeCompare : ArrayList<Long>
        - errorDepthLabel : JLabel
        - errorInvalidURLLabel : JLabel
        - errorThreadsLabel : JLabel
        - jLabel1 : JLabel
        - jLabel2 : JLabel
        - jLabel3 : JLabel
        - jLabel5 : JLabel
        - jSpinner1 : JSpinner
        - linkField : JTextField
        - startButton : JToggleButton
        - threadNoSpin : JSpinner
        - totalDepthSpin : JSpinner
        + FrontPage()
        {static} + main()
        - initComponents()
        - startButtonActionPerformed()
        - startupGUI()
        - validateUserInput()
    }
  }
  

  namespace userinterface {
    class userinterface.LinkServices {
        - currentDepth : int
        - link : String
        - maxDepth : int
        + LinkServices()
        + run()
    }
  }
  

  namespace userinterface {
    class userinterface.Statistics {
        - jButton1 : JButton
        - jLabel1 : JLabel
        - jLabel2 : JLabel
        - jLabel3 : JLabel
        - jScrollPane1 : JScrollPane
        - jTable1 : JTable
        - mTimeField : JTextField
        - nInvalidField : JTextField
        - nValidField : JTextField
        + Statistics()
        - initComponents()
        - jButton1ActionPerformed()
        - mTimeFieldActionPerformed()
        - nInvalidFieldActionPerformed()
        - nValidFieldActionPerformed()
        - validationProcess()
    }
  }
  

  namespace userinterface {
    class userinterface.validation {
        {static} - countInvalid : int
        {static} - countValid : int
        - currentDepth : int
        - link : String
        - totalDepth : int
        + extractLinkAndValidate()
        {static} + getCountInvalid()
        {static} + getCountValid()
        + getCurrentDepth()
        + getLink()
        + getTotalDepth()
        {static} + setCountInvalid()
        {static} + setCountValid()
        + setCurrentDepth()
        + setLink()
        + setTotalDepth()
        {static} + validateURL()
        + validation()
        ~ validation()
    }
  }
  

  userinterface.FrontPage -up-|> javax.swing.JFrame
  userinterface.Statistics -up-|> javax.swing.JFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
